# obce

./: Cargo.toml
codegen/: Cargo.toml
codegen/src/: implementation.rs  utils.rs
examples/rand-extension/chain-extension/: Cargo.toml
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs
src/substrate/: environment.rs  mod.rs
tests/ui/ink/mock/: fail_incorrect_inputs.stderr  fail_random_trait.stderr
tests/ui/substrate/error/: fail_duplicated_ret_val.stderr  fail_enforced_ret_val.stderr
tests/ui/substrate/implementation/: pass_expr_weight.rs  pass_weight_expr_with_vars.rs  pass_weight_with_pre_charge.rs
