[package]
name = "obce-codegen"
version = "0.1.0"
authors = ["727.Ventures <green.baneling@727.ventures>"]
edition = "2021"

license = "MIT"
repository = "https://github.com/Brushfam/obce"
documentation = "https://github.com/Brushfam/obce/blob/main/README.md"
homepage = "https://727.ventures"
description = "The library provides tools and primitives to simplify the development of chain extensions for ink! and Substrate."
keywords = ["wasm", "727.ventures", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
darling = "0.14"
itertools = "0.10"
syn = { version = "1", features = ["parsing", "full", "visit", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
blake2 = "0.10"
tuple = "0.5"

[lib]
name = "obce_codegen"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = []